fix scrollbar

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,3 +3,27 @@
 
 // custom sass
 @import '404';
+
+$background-color: #1d212c;
+$main-color: #78e2a0;
+
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: $main-color $background-color;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: $background-color;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: $main-color;
+  border-radius: 20px;
+  border: 3px solid $background-color;
+}
